Code cleaning (MyList)